[package]
name = "mdbook-blocky"
version = "0.1.0"

authors = ["Doug Bradshaw <dhbradshaw@gmail.com>", "ryanhcotter@gmail.com"]
categories = ["command-line-utilities"]
description = "An mdbook preprocessor for adding html-css classes to markdown."
edition = "2018"
exclude = [
    "examples/*",
]
homepage = "https://github.com/reviewable/mdbook-classy"
keywords = ["mdbook", "classy", "markdown", "commonmark","css"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/reviewable/mdbook-classy"

[dependencies]
clap = "4.3.21"
mdbook = "0.4.34"
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "10.0.4"
serde_json = "1.0"
